- R_TextEditor default color on dark mode (without styling) - Bug fix failed to open popup after popup - Refactor IconFilePath

--- a/BlazorMenu/wwwroot/css/app.telerik.css
+++ b/BlazorMenu/wwwroot/css/app.telerik.css
@@ -109,6 +109,10 @@
         background-color: var(--falcon-input-bg) !important;
     }
 
+        .k-editor .k-content * {
+            color: var(--falcon-input-color); /* default color if there's no "color" inline properties*/
+        }
+
     .k-editor.k-disabled .k-content {
         background-color: var(--falcon-200) !important;
         pointer-events: auto !important; /* scrollable on disabled content */
